--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "studi-kasus-electron-aplikasi-video-player",
+  "name": "shb-video-player",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -7,8 +7,6 @@
     "dev": "electron ."
   },
   "keywords": [],
-  "author": "SWLRNSHW-200",
-  "license": "ISC",
   "devDependencies": {
     "electron": "^12.0.7"
   }
