--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shb-video-player",
+  "name": "shb-el-video-player",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
