--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+srcc/
+3rdparty_licenses/
 
 # TypeScript v1 declaration files
 typings/
