--- a/package.json
+++ b/package.json
@@ -1,13 +1,46 @@
 {
-  "name": "shb-el-video-player",
-  "version": "2023.3.20",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "dev": "electron ."
-  },
-  "keywords": [],
-  "devDependencies": {
-    "electron": "^12.0.7"
-  }
+    "name": "shb-el-video-player",
+    "version": "2023.5.1",
+    "description": "Aplikasi video player",
+    "main": "main.js",
+    "author": "SHBFRLNC",
+    "scripts": {
+        "start": "electron .",
+        "dev": "electron . --dev",
+        "obfuscate": "node obfuscate.js",
+        "dist": "electron-builder",
+        "genlicense": "node ndlg.js"
+    },
+    "build": {
+        "buildVersion": "0",
+        "appId": "com.sfrfrlnc.shb-el-video-player",
+        "productName": "SHB EL Video Player",
+        "win": {
+            "target": "nsis",
+            "icon": "build/icon.ico"
+        },
+        "asar": true,
+        "publish": null,
+        "directories": {
+            "output": "../_Release/shb-el-video-player"
+        },
+        "files": [
+            "**/*",
+            "!src",
+            "!obfuscate.js",
+            "!ndlg.js"
+        ],
+        "extraFiles": [
+            "LICENSE",
+            "3rdparty_licenses/*.*"
+        ]
+    },
+    "keywords": [],
+    "devDependencies": {
+        "copy-dir": "^1.3.0",
+        "electron": "^24.1.3",
+        "electron-builder": "^23.6.0",
+        "javascript-obfuscator": "^4.0.2",
+        "license-checker": "^25.0.1"
+    }
 }
