--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shb_el_video_player",
-    "version": "2023.9.30",
+    "version": "2023.12.02",
     "description": "Aplikasi video player",
     "main": "main.js",
     "scripts": {
@@ -12,16 +12,16 @@
     },
     "build": {
         "buildVersion": "0",
-        "appId": "com.sfrfrlnc.shb_el_video_player",
+        "appId": "com.rakifsul.shb_el_video_player",
         "productName": "SHB EL Video Player",
         "win": {
             "target": "nsis",
-            "icon": "build/icon.ico"
+            "icon": "build/icon.png"
         },
         "asar": true,
         "publish": null,
         "directories": {
-            "output": "../_Release/shb_el_video_player"
+            "output": "./dist"
         },
         "files": [
             "**/*",
@@ -37,9 +37,9 @@
     "keywords": [],
     "devDependencies": {
         "copy-dir": "^1.3.0",
-        "electron": "^24.1.3",
-        "electron-builder": "^23.6.0",
-        "javascript-obfuscator": "^4.0.2",
+        "electron": "^27.1.3",
+        "electron-builder": "^24.9.1",
+        "javascript-obfuscator": "^4.1.0",
         "license-checker": "^25.0.1"
     }
 }
